--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 :root {
-    --page-bkgd:#fff;
+    --page-bkgd:#f7f6f4;
     --dark-bkgd:#333;
     --accent:#ebc41b;
     --font-headline: 'Anton', sans-serif;
@@ -7,6 +7,7 @@
     --font-slab: 'Hepta Slab', serif;
     --font-block: 'Diplomata', cursive;
     --font-serif-headline: 'Wildstone','Old Standard TT', serif;
+    --font-serif-headline-numbers: 'Old Standard TT', serif;
     --font-thin-headline: 'Barlow Condensed', sans-serif;
     --font-thin-slab: 'Stint Ultra Expanded', cursive;
     --font-gothic:'UnifrakturMaguntia', cursive;
@@ -20,6 +21,21 @@
     src: url('fonts/Wildstone.ttf')  format('truetype'); /* Legacy iOS */
 }
 
+@media (prefers-color-scheme: dark) {
+    :root {
+        --page-bkgd:#333;
+        --dark-bkgd:#f7f6f4;
+    }
+
+    .lightText {
+        display:block;
+    }
+
+    .darkText {
+        display:none;
+    }
+}
+
 
 html {}
 
@@ -29,6 +45,7 @@ body {
     font-family: var(--font-serif);
     font-size:110%;
     color:var(--dark-bkgd);
+    background-color:var(--page-bkgd);
 }
 
 * {
@@ -81,6 +98,10 @@ hr {
     float: left;
     line-height: 0.875;
     margin-right:0.25rem;
+}
+
+.lightText {
+    display:none;
 }
 
 /* ########## HEADER ########## */
@@ -198,7 +219,7 @@ header .tagline {
 
 header .line.bottom {
     grid-area: line-bottom;
-   
+    margin-top:0;
 }
 header .line.bottom:before {
     top:2px;
@@ -428,6 +449,9 @@ aside#page-intro .edition .editor {
     display:block;
     font-family:var(--font-gothic);
     font-size:3.5vw;
+    text-align: justify;
+    text-justify: inter-word;
+    text-align-last: justify;
 }
 
 aside#page-intro .lucky-numbers {
@@ -481,7 +505,7 @@ aside#page-intro .price .burst {
     top:0;
     left:0;
     width: 100%;
-    background-image:url(images/price.svg);
+    background-image:url(https://www.erinmessel.com/daily-prophet/images/price.svg);
     background-size:cover;
     background-position: center;
 }
@@ -784,7 +808,7 @@ aside#page-intro .price .burst {
 }
 
 .sub2Line3 a {
-    color:#fff;
+    color:var(--page-bkgd);
     padding: 0.75rem 1rem;
     display: block;
     text-decoration:none;
@@ -800,7 +824,7 @@ aside#page-intro .price .burst {
     text-decoration:none;
     display:block;
     background-color:var(--dark-bkgd);
-    color:#fff;
+    color:var(--page-bkgd);
     padding:1rem;
     display:flex;
     align-items:center;
@@ -882,10 +906,10 @@ aside#page-intro .price .burst {
 
 #footerNav ul li a {
     text-decoration:none;
-    color:#000;
+    color:var(--dark-bkgd);
     display: flex;
     align-items: center;
-    text-shadow: 2px 2px 1px #fff;
+    text-shadow: 2px 2px 1px var(--page-bkgd);
     padding:.5rem;
 }
 #footerNav ul li a:hover {
@@ -903,7 +927,7 @@ aside#page-intro .price .burst {
     margin-right:0.5rem;
 }
 #footerNav ul li .pageNo {
-    font-family:var(--font-serif-headline);
+    font-family:var(--font-serif-headline-numbers);
     font-size: 2.5rem;
     line-height: 1;
 }
@@ -912,14 +936,21 @@ footer {
     text-align:center;
     font-style:italic;
     padding-top:2rem;
+    padding-bottom:2rem;
 }
 
 @media (min-width:800px) {
     body {
         font-size:120%;
     }
+    header {
+        grid-template-columns: 1fr 4fr;
+    }
     header .tagline {
         font-size:3vw;
+    }
+    header .line.bottom {
+        margin-top:0;
     }
     aside#page-intro {
         grid-template-areas:
@@ -1016,7 +1047,7 @@ footer {
 
     #main {
         display:grid;
-        grid-template-columns:1fr 2fr 1fr 1fr;
+        grid-template-columns:minmax(175px,15vw) 2fr 2fr 1fr 1fr;
         /* grid-template-rows:; */
         grid-column-gap: 1rem;
     }
@@ -1054,12 +1085,12 @@ footer {
         grid-column:1 / -1;
     }
     #main .title.line2 {
-        grid-column: 1 / 3;
+        grid-column: 1 / 4;
         grid-row: 3;
     }
     #main .txt1 {
-        grid-column-start:3;
-        grid-column-end:5;
+        grid-column-start:4;
+        grid-column-end:-1;
         grid-row-start:3;
         grid-row-end: 4;
         align-self: center;
@@ -1067,21 +1098,21 @@ footer {
     }
 
     #main .img {
-        grid-column: 1 / 3;
+        grid-column: 1 / 4;
         margin:0;
     }
 
     #main .lede {
         grid-column-start: 2;
-        grid-column-end: 5;
+        grid-column-end: -1;
         grid-row-start: 6;
         grid-row-end: 7;
         margin: .5rem 0 1rem;
-        font-size: 2.75vw;
+        font-size: 6vw;
     }
 
     #main .lede .finger {
-        font-size:5vw;
+        font-size:8vw;
         line-height:1;
     }
 
@@ -1090,7 +1121,7 @@ footer {
     }
 
     #main .txt2 {
-        grid-column: 3 / 5;
+        grid-column: 4 / -1;
     }
 
     #main .txt2 p:first-of-type {
@@ -1098,7 +1129,7 @@ footer {
     }
 
     #main .txt3 {
-        grid-column: 2 / 5;
+        grid-column: 2 / -1;
         grid-row: 7 / 8;
         margin:0;
     }
@@ -1128,9 +1159,9 @@ footer {
     }
 
     .subLine2mobile {
-        grid-column:2/5;
-        grid-row:8 / 10;
-        font-size:9vw;
+        grid-column:2/-1;
+        grid-row:8 / 9;
+        font-size:10.5vw;
         border-top: 1rem solid var(--dark-bkgd);
         margin-top: 1rem;
         padding-top:1.25rem;
@@ -1142,19 +1173,23 @@ footer {
 
     .subLine3 {
         grid-column:2/5;
-        font-size:7vw;
-        grid-row: 10;
+        font-size:6vw;
+        grid-row: 9;
     }
 
     .subLine3 .finger {
-        font-size:10vw;
+        font-size:9vw;
     }
 
     .subText1 {
-        grid-column: 2/ 5;
-        font-size: 2vw;
+        grid-column: 5/ 6;
+        font-size: 1.25vw;
         text-align: justify;
-        /* grid-row: span 2; */
+        grid-row: 9 / 11;
+    }
+
+    .subText2 {
+        grid-column: 2 / 5;
     }
 
     .sub2Line2 {
@@ -1163,14 +1198,18 @@ footer {
 
     .subText3 {
         column-count:2;
+        grid-column: 2 / -1;
+        grid-row: span 3;
     }
 
     .sub2Line1 {
-        grid-column: 1 / 3;
-        font-size: 10vw;
+        grid-column: 3 / -1;
+        font-size: 9vw;
         margin:0;
         line-height: .75;
         padding-top: 1rem;
+        border-top: .75rem solid var(--dark-bkgd);
+        padding-top: 2vw;
     }
 
     .sub2Line1 hr {
@@ -1178,9 +1217,9 @@ footer {
     }
 
     .sub2Line2 {
-        grid-column: 1 / 3;
+        grid-column: 3 / 5;
         font-size: 10vw;
-        grid-row: span 2;
+        /* grid-row: span 2; */
     }
 
     .sub2Line2 .line1 {
@@ -1188,27 +1227,35 @@ footer {
     }
 
     .subStory.sub2Text {
-        grid-column: 3 / 5;
-        grid-row: 15 / 17;
+        grid-column: 3 / -1;
+        /* grid-row: 15 / 18; */
         align-self: end;
-        padding-bottom:1rem;
+        /* padding-bottom:1rem; */
     }
 
     .subStory.sub2Line3 {
-        grid-column: 3 / 5;
-        grid-row: 17;
+        grid-column: 5 / -1;
+        /* grid-row: 17; */
         margin:0;
     }
     .subText4 {
-        border-bottom: .75rem solid var(--dark-bkgd);
-        padding-bottom: 1rem;
-        grid-row: 14;
-        grid-column: 1 / 4;
+        /* border-bottom: .75rem solid var(--dark-bkgd);
+        padding-bottom: 1rem; */
+        grid-row: 14 / 17;
+        grid-column: 1 / 3;
+    }
+
+    .subText4::before {
+        content: "";
+        width: 16.5vw;
+        float: left;
+        display: block;
+        height: 9vw;
     }
 
     .readers-offers {
-        grid-column: 4;
-        grid-row: 14;
+        grid-column: 1;
+        grid-row: 12 / 15;
     }
 
     .readers-offers a {
@@ -1257,10 +1304,30 @@ footer {
     body {
         font-size:112.5%;
     }
+    .subText4,
+    .readers-offers {
+        margin-bottom:1.5rem;
+    }
+    .sub2Line1 {
+        /* padding-top:0;
+        line-height:.875; */
+    }
+    .sub2Line2 {
+        /* display:flex;
+        justify-content: space-between; */
+    }
+    .sub2Line2 .line1 {
+        font-size:3vw;
+        line-height:.875;
+    }
+    .sub2Line2 .line2 {
+        font-size:5.75vw;
+        line-height:.875;
+    }
 }
 @media (min-width:1400px) {
     body {
-        font-size:calc(8px + .5vw);
+        font-size:calc(10px + .5vw);
     }
     #main aside.leftSide hr {
         display:block;
@@ -1416,7 +1483,7 @@ footer {
         /* grid-template-columns: repeat(7, 1fr); */
         grid-template-columns: 1fr 11vw 1fr 1fr 10vw 11vw auto;
         grid-column-gap: 1.5vw;
-        grid-template-rows: auto auto 6vw 14vw auto auto auto 8vw 6vw 5vw;
+        grid-template-rows: auto auto 6vw 14vw auto auto auto 9vw 6vw 5vw;
     }
     #main .opening {
         gap: 2.5rem;
@@ -1453,7 +1520,7 @@ footer {
         grid-column-end: 6;
         grid-row:4;
         font-size:13vw;
-        margin:0;
+        margin:1vw 0 0;
         align-self: center;
     }
     #main .img {
@@ -1469,7 +1536,7 @@ footer {
         grid-column-start:7;
         grid-column-end: 8;
         grid-row-start: 3;
-        grid-row-end:10;
+        grid-row-end:11;
         writing-mode:vertical-rl;
         font-size:4vw;
     }
@@ -1486,12 +1553,13 @@ footer {
         display:block;
         grid-column-start:6;
         grid-column-end: 8;
-        grid-row-start:10;
-        grid-row-end: 11;
+        grid-row-start:11;
+        grid-row-end: 12;
         font-family:var(--font-serif-headline);
         font-weight:bold;
         text-transform: uppercase;
         font-size: 5vw;
+        line-height: .875;
         text-align-last: justify;
         text-justify: inter-character;
     }
@@ -1526,7 +1594,7 @@ footer {
         grid-column-start:6;
         grid-column-end: 7;
         grid-row-start:3;
-        grid-row-end: 10;
+        grid-row-end: 11;
         padding-bottom:1rem;
     }
     #main .txt3 .blockLetter {
@@ -1542,8 +1610,8 @@ footer {
     .fullReport {
         grid-column-start:6;
         grid-column-end: 8;
-        grid-row-start:11;
-        grid-row-end: 14;
+        grid-row-start:12;
+        grid-row-end: 15;
         border-bottom:none;
     }
     .fullReport a .txt {
@@ -1566,7 +1634,7 @@ footer {
         grid-column-end: 5;
         grid-row-start:8;
         grid-row-end: 9;
-        font-size:7.5vw;
+        font-size:8.5vw;
         display:block;
         line-height:0.875;
         border:none;
@@ -1589,7 +1657,8 @@ footer {
         grid-column-start:1;
         grid-column-end: 2;
         grid-row-start:9;
-        grid-row-end: 13;
+        grid-row-end: 12;
+        margin-bottom:0;
     }
     .subText1 .large {
         display:block;
@@ -1597,7 +1666,7 @@ footer {
     .subText1 p {
         font-style: normal;
         display: flex;
-        font-size: 0.9vw;
+        font-size: 1vw;
     }
     .subText1 .large {
         writing-mode: vertical-lr;
@@ -1605,7 +1674,7 @@ footer {
         text-align: right;
         font-family: var(--font-thin-slab);
         text-transform: uppercase;
-        font-size: 8.5vw;
+        font-size: 8.75vw;
         line-height: 0.7;
         float:left;
         letter-spacing: -0.5vw;
@@ -1628,7 +1697,7 @@ footer {
         grid-column-start:2;
         grid-column-end: 4;
         grid-row-start:10;
-        grid-row-end: 16;
+        grid-row-end: 17;
         column-count: 2;
         gap: 1.5em;
     }
@@ -1639,7 +1708,11 @@ footer {
         grid-column-start:4;
         grid-column-end: 6;
         grid-row-start:10;
-        grid-row-end: 13;
+        grid-row-end: 14;
+        margin-bottom:0;
+    }
+    .subText4::before {
+        display:none;
     }
     /* .subStory {
         grid-column-start:4;
@@ -1650,18 +1723,20 @@ footer {
     .subStory.sub2Line1 {
         grid-column-start:4;
         grid-column-end: 6;
-        grid-row-start:13;
-        grid-row-end: 15;
+        grid-row-start:14;
+        grid-row-end: 16;
         font-size:5.25vw;
         margin-top:0;
+        align-self:end;
     }
     .subStory.sub2Line2 {
         grid-column-start:6;
         grid-column-end: 8;
-        grid-row-start:14;
-        grid-row-end: 16;
+        grid-row-start:15;
+        grid-row-end: 17;
         font-size:2vw;
         align-self:end;
+        display:block;
     }
     .sub2Line2 .line1 {
         font-size:3vw;
@@ -1675,8 +1750,8 @@ footer {
     .subStory.sub2Line3 {
         grid-column-start:4;
         grid-column-end: 5;
-        grid-row-start:15;
-        grid-row-end: 16;
+        grid-row-start:16;
+        grid-row-end: 17;
         font-size:3vw;
         padding: 0;
         margin: 0;
@@ -1698,8 +1773,8 @@ footer {
     .subStory.sub2Text {
         grid-column-start:5;
         grid-column-end: 6;
-        grid-row-start:15;
-        grid-row-end: 16;
+        grid-row-start:16;
+        grid-row-end: 17;
         font-size:1vw;
         display: -webkit-box;
         -webkit-line-clamp: 3;
@@ -1709,8 +1784,9 @@ footer {
     .readers-offers {
         grid-column-start:1;
         grid-column-end: 2;
-        grid-row-start:13;
-        grid-row-end: 16;
+        grid-row-start:12;
+        grid-row-end: 17;
+        margin:1rem 0 0;
     }
     .readers-offers a {
         margin:0;
